--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "install-deps": "npm install"
   },
   "dependencies": {
+    "@octokit/rest": "^19.0.13",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -24,4 +25,4 @@
   ],
   "author": "Calendar Project",
   "license": "MIT"
-} 
+}
